# cassandra

./: Cargo.toml  Makefile  README.md  dfx.json
src/cassandra/: Cargo.toml  cassandra.did
src/cassandra/src/: lib.rs  memory.rs
src/cassandra/src/methods/: canister.rs  github_auth.rs  google_auth.rs  mod.rs
src/cassandra/src/migrations/: mod.rs
src/cassandra/src/types/: auth_response.rs  mod.rs
src/cassandra/src/utils/: canister.rs  errors.rs  http.rs  lib.rs  macros.rs  mod.rs  nat.rs  signature.rs
src/cassandra_backend/: Cargo.toml
