[package]
name = "cassandra"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
candid = "0.9"
ic-utils = { package = "canistergeek_ic_rust", version = "0.4.2" }
ciborium = "0.2.1"
ic-cdk = "0.11.3"
ic-stable-structures = "0.6.1"
serde = { version = "1.0.194", features = ["derive"] }
thiserror = "1.0.56"
ic-web3-rs = { git = "https://github.com/orally-network/ic-web3-rs", version = "0.1.3" }


hex = "0.4.3"
ic-cdk-timers = "0.4.0"
tokio = { version = "1.35.1", features = ["sync"] }
num-bigint = "0.4.4"
siwe = "0.6.0"
time = "0.3.32"
derive_builder = "0.13.0"
serde_json = "1.0.113"
paginate = "1.1.11"
jsonrpc-core = "18.0.0"

cketh-common = { git = "https://github.com/dfinity/ic", rev = "8511846fb6352a0a4f9abae1a8fc8569aeba5f10", package = "ic-cketh-minter" }
urlencoding = "2.1.3"
serde_qs = "0.12.0"
jwt = "0.16.0"
#jsonwebtoken-rustcrypto = "1.2.0"
# or check jwt PKeyWithDigest
